<resources>
    <string name="app_name">Composer</string>
    <string name="tiles_container">Tiles container</string>>
    <string name="main_title"><b>Composer</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="symphony_name">Symphony name</string>
    <string name="back">back</string>
    <string name="heart">heart</string>
    <string name="opensearch">OpenSearch</string>
    <string name="addsymphony">addSymphony</string>
    <string name="play">play</string>
    <string name="compostion_name">Composition name</string>
    <string name="author_name">Author name</string>
    <string name="default_instrument">Default instrument</string>
    <string name="composition_speed">Composition speed</string>
    <string name="change_instrument">Instrument type</string>
</resources>
