<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activities.PianoViewOnly">


    <ProgressBar
        android:id="@+id/progressBar_cyclic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/login_background_color"
        android:indeterminateTintMode="src_atop"
        android:padding="160dp"
        android:visibility="visible" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/back"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_arrow_back_24" />

            <TextView
                android:id="@+id/symphonyName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:text="@string/symphony_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintStart_toEndOf="@+id/back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:id="@+id/loading_sound_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/login_background_color"
                    android:indeterminateTintMode="src_atop"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/imageHeart"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:background="@color/white"
                    android:clickable="true"
                    android:contentDescription="@string/heart"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_favorite_empty" />

                <ImageButton
                    android:id="@+id/playButtonPiano"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/play"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_play" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/viewing"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="Main content put here"
        android:gravity="top"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewHeader">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="300dp">

                <com.example.composer.activities.Staff
                    android:id="@+id/staff"
                    android:layout_width="239dp"
                    android:layout_height="133dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
